updated the home page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
             </div>
         </div>
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium omnis at, id voluptatibus eos dicta facere,debitis tempore, mollitia odit nostrum reprehenderit!
-              Modi, illum ut! Ipsum veritatis fuga provident dolorum.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe quo numquam obcaecati, cum porro et odit 
-              dolorem magni aliquid error quidem suscipit nostrum neque reprehenderit laboriosam ad dolorum qui recusandae.
-            
+            Welcome to Belicious, haven for delicious and authentic food! 
+What makes us special is our commitment to using only the freshest and highest-quality ingredients. We source our produce from local farmers. We also make all of our sauces and dressings from scratch, so you can be sure that you're getting the best possible taste.
+
+<br>In addition to our delicious food, we also offer a warm and inviting atmosphere. Our staff is friendly and attentive. We want you to feel like you're part of our family when you dine with us.
+
+Whether you're looking for a casual lunch with friends or a romantic dinner for two, Belicious is the perfect place for you. We're sure you'll love our food, our atmosphere, and our friendly service.
         </p>
         <div class="main_btn">
             <a href="#">Oder Now</a>
@@ -57,7 +59,7 @@
             <div class="about_text">
                 <h1><span>About</span>Us</h1>
                 <h3>Why choose us?</h3>
-                <p>At [restaurant name], we believe that food should be delicious, fresh, and made with love. That's why we use only the highest quality ingredients in our dishes, 
+                <p>At Belicious, we believe that food should be delicious, fresh, and made with love. That's why we use only the highest quality ingredients in our dishes, 
                     and we cook everything to order. Our signature burger is made with a juicy beef patty, melted cheese, crispy bacon, and all the fixings. It's so good, you'll 
                     lick your fingers. But don't just take our word for it, come taste the difference for yourself!</p>
             </div>
