--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
                 <li><a href="#Home"></a>Home</li>
                 <li><a href="#About"></a>About</li>
                 <li><a href="#Menu"></a>Menu</li>
-                <li><a href="#Gallery"></a>Gallery</li>
-                <li><a href="#Review"></a>Home</li>
                 <li><a href="#Order"></a>Order</li>
+                <li><a href="#Team"></a>Our Team</li>
             </ul>
             <div class="icon">
                 <i class="fa fa-search" aria-hidden="true"></i>
@@ -315,14 +314,13 @@ Whether you're looking for a casual lunch with friends or a romantic dinner for 
                 <p>Address</p>
                 <input type="text" placeholder="your Address">
             </div>
-            <a href="#" class="order_btn">Order Now
-            </a>
+            <a href="#" class="order_btn">Order Now</a>
         </form>
     </div>
 </div>
 
 <!-- Team -->
-<div class="team">
+<div class="team"  id="Team">
 <h1>Our <span>Team</span></h1>
 <div class="team_box">
     <div class="profile">
@@ -338,10 +336,10 @@ Whether you're looking for a casual lunch with friends or a romantic dinner for 
         </div>
     </div>
     <div class="profile">
-        <img src="images/cookies.jpg">
+        <img src="images/20230325_124206.jpg">
         <div class="info">
             <h2 class="name">Chef</h2>
-            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <p class="bio">Simiyu </p>Speciality Pastries</p>
             <div class="team_icon">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
                 <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -350,10 +348,10 @@ Whether you're looking for a casual lunch with friends or a romantic dinner for 
         </div>
     </div>
     <div class="profile">
-        <img src="images/cookies.jpg">
+        <img src="images/20230325_124206.jpg">
         <div class="info">
             <h2 class="name">Chef</h2>
-            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <p class="bio">Simiyu </p>Speciality Pastries</p>
             <div class="team_icon">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
                 <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -362,10 +360,10 @@ Whether you're looking for a casual lunch with friends or a romantic dinner for 
         </div>
     </div>
     <div class="profile">
-        <img src="images/cookies.jpg">
+        <img src="images/20230325_124206.jpg">
         <div class="info">
             <h2 class="name">Chef</h2>
-            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <p class="bio">Simiyu </p>Speciality Pastries</p>
             <div class="team_icon">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
                 <i class="fa fa-twitter" aria-hidden="true"></i>
